// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel should match snapshot 1`] = `
<styled.div
  columns={2}
>
  <styled.div>
    <styled.div>
      <styled.img />
      <styled.p />
    </styled.div>
    <styled.ul>
      <li>
        <Navigation
          direction="left"
          onClick={[Function]}
        />
      </li>
      <li>
        <Navigation
          direction="right"
          onClick={[Function]}
        />
      </li>
    </styled.ul>
  </styled.div>
  <styled.div>
    <Grid
      columns={2}
      currentArea={0}
      rows={2}
      tiles={
        Array [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
        ]
      }
    />
  </styled.div>
  <Progress
    percentage={33.333333333333336}
  />
  <styled.div>
    <styled.div />
    <styled.a>
      Voir les offres
    </styled.a>
  </styled.div>
</styled.div>
`;

exports[`Carousel should match snapshot, when cursor is 0 then percentage is 20 1`] = `
<styled.div
  columns={1}
>
  <styled.div>
    <styled.div>
      <styled.img />
      <styled.p />
    </styled.div>
    <styled.ul>
      <li>
        <Navigation
          direction="left"
          onClick={[Function]}
        />
      </li>
      <li>
        <Navigation
          direction="right"
          onClick={[Function]}
        />
      </li>
    </styled.ul>
  </styled.div>
  <styled.div>
    <Grid
      columns={1}
      currentArea={0}
      rows={2}
      tiles={
        Array [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
        ]
      }
    />
  </styled.div>
  <Progress
    percentage={20}
  />
  <styled.div>
    <styled.div />
    <styled.a>
      Voir les offres
    </styled.a>
  </styled.div>
</styled.div>
`;

exports[`Carousel should match snapshot, when is mobile = "true" then column is overridden to "1" 1`] = `
<styled.div
  columns={1}
>
  <styled.div>
    <styled.div>
      <styled.img />
      <styled.p />
    </styled.div>
    <styled.ul>
      <li>
        <Navigation
          direction="left"
          onClick={[Function]}
        />
      </li>
      <li>
        <Navigation
          direction="right"
          onClick={[Function]}
        />
      </li>
    </styled.ul>
  </styled.div>
  <styled.div>
    <Grid
      columns={1}
      currentArea={0}
      rows={2}
      tiles={
        Array [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
        ]
      }
    />
  </styled.div>
  <Progress
    percentage={20}
  />
  <styled.div>
    <styled.div />
    <styled.a>
      Voir les offres
    </styled.a>
  </styled.div>
</styled.div>
`;
